[gd_scene load_steps=4 format=3 uid="uid://c2cq5jjjb88ml"]

[ext_resource type="Script" uid="uid://bna1hm34ud4dm" path="res://scripts/player/camera.gd" id="1_veevr"]
[ext_resource type="Texture2D" uid="uid://cjheprhik38ob" path="res://Assets/Sprites/cam overlay/overlay.png" id="3_rvd8c"]
[ext_resource type="Script" uid="uid://kfhwmdde8u2a" path="res://scripts/player/overlay.gd" id="3_uwrrs"]

[node name="MainCamera" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("1_veevr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="camoverlay" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_uwrrs")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/camoverlay"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("3_rvd8c")
expand_mode = 1

[node name="ShopPanel" type="Panel" parent="CanvasLayer/camoverlay/TextureRect"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.54800004
anchor_top = 0.31800002
anchor_right = 0.81900007
anchor_bottom = 0.675
offset_left = -0.44006348
offset_top = 0.039993286
offset_right = -0.32006836

[node name="PurchaseButton" type="Button" parent="CanvasLayer/camoverlay/TextureRect/ShopPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.13800001
anchor_top = 1.074
anchor_right = 1.0840001
anchor_bottom = 1.8780001
offset_left = 0.11399078
offset_top = -0.018005371
offset_right = -0.0079956055
offset_bottom = -0.102996826
text = "Purchase
"

[node name="ShopList" type="VBoxContainer" parent="CanvasLayer/camoverlay/TextureRect/ShopPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.040000003
anchor_top = 0.019000001
anchor_right = 0.95300007
anchor_bottom = 0.97300005
offset_top = 0.116999626
offset_right = 0.055007935
offset_bottom = -0.061019897

[node name="Label_Title" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 519.0
offset_right = 134.0
offset_bottom = 561.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Tile Info:"

[node name="Label_TileType" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 562.0
offset_right = 366.0
offset_bottom = 604.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Terrain:"

[node name="Label_MovementCost" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 600.0
offset_right = 364.0
offset_bottom = 642.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Cost:"

[node name="Label_Position" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 636.0
offset_right = 373.0
offset_bottom = 678.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Position:"

[node name="Label_Resource" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 669.0
offset_right = 379.0
offset_bottom = 711.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Building:"

[node name="Button" type="Node" parent="CanvasLayer/camoverlay/TextureRect"]

[node name="MoveButton" type="Button" parent="CanvasLayer/camoverlay/TextureRect/Button"]
offset_left = 1081.0
offset_top = 600.0
offset_right = 1270.0
offset_bottom = 710.0
text = "Move"

[node name="UseButton" type="Button" parent="CanvasLayer/camoverlay/TextureRect/Button"]
offset_left = 1081.0
offset_top = 496.0
offset_right = 1174.0
offset_bottom = 598.0
text = "Use"

[node name="DropButton" type="Button" parent="CanvasLayer/camoverlay/TextureRect/Button"]
offset_left = 1176.0
offset_top = 496.0
offset_right = 1270.0
offset_bottom = 598.0
text = "Drop"

[node name="Label_Health" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 1072.0
offset_top = 303.0
offset_right = 1273.0
offset_bottom = 328.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Health:"

[node name="Label_Attack" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 1072.0
offset_top = 326.0
offset_right = 1273.0
offset_bottom = 351.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Attack:"

[node name="Label_Defence" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 1072.0
offset_top = 348.0
offset_right = 1273.0
offset_bottom = 373.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Defence:"

[node name="Label_Speed" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 1072.0
offset_top = 371.0
offset_right = 1273.0
offset_bottom = 396.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Speed:"

[node name="Label_Magic" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 1072.0
offset_top = 394.0
offset_right = 1273.0
offset_bottom = 419.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Magic:"

[node name="Label_Crit" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 1072.0
offset_top = 417.0
offset_right = 1273.0
offset_bottom = 442.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Crit:"

[node name="Label_Gold" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 1072.0
offset_top = 440.0
offset_right = 1273.0
offset_bottom = 465.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Gold:"

[node name="Label_Energy" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 1072.0
offset_top = 461.0
offset_right = 1273.0
offset_bottom = 486.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Energy:"

[node name="BattlePanel" type="Panel" parent="CanvasLayer/camoverlay/TextureRect"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.272
anchor_top = 0.707
anchor_right = 0.56700003
anchor_bottom = 0.99200004
offset_left = -0.16003418
offset_top = -0.040008545
offset_right = 0.23999023
offset_bottom = -0.24005127

[node name="PlayerHealthLabel" type="Label" parent="CanvasLayer/camoverlay/TextureRect/BattlePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.040000003
anchor_top = 0.039
anchor_right = 0.42100003
anchor_bottom = 0.15100001
offset_left = -0.12000084
offset_top = 0.0049996376
offset_right = -0.13801575
offset_bottom = 0.04499817

[node name="EnemyHealthLabel" type="Label" parent="CanvasLayer/camoverlay/TextureRect/BattlePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.59300005
anchor_top = 0.039
anchor_right = 0.97400004
anchor_bottom = 0.15100001
offset_left = -0.15402222
offset_top = 0.0049996376
offset_right = -0.17202759
offset_bottom = 0.04499817

[node name="PlayerSprite" type="TextureRect" parent="CanvasLayer/camoverlay/TextureRect/BattlePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.040000003
anchor_top = 0.18
anchor_right = 0.43400002
anchor_bottom = 0.94600004
offset_left = -0.12000084
offset_top = 0.099998474
offset_right = -0.052001953
offset_bottom = 0.069992065

[node name="EnemySprite" type="TextureRect" parent="CanvasLayer/camoverlay/TextureRect/BattlePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.577
anchor_top = 0.18
anchor_right = 0.9710001
anchor_bottom = 0.94600004
offset_left = -0.10600281
offset_top = 0.099998474
offset_right = -0.038024902
offset_bottom = 0.069992065

[node name="attackButton" type="Button" parent="CanvasLayer/camoverlay/TextureRect/BattlePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.016
anchor_top = 0.010000001
anchor_right = 1.452
anchor_bottom = 0.5
offset_left = -0.04800415
offset_top = -0.05000019
offset_right = 0.14398193
offset_bottom = 0.5
text = "Attack"

[node name="magicButton" type="Button" parent="CanvasLayer/camoverlay/TextureRect/BattlePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.016
anchor_top = 0.512
anchor_right = 1.452
anchor_bottom = 1.0
offset_left = -0.04800415
offset_top = 0.039993286
offset_right = 0.14398193
offset_bottom = 1.0
text = "Magic"

[node name="itemButton" type="Button" parent="CanvasLayer/camoverlay/TextureRect/BattlePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.46
anchor_top = 0.010000001
anchor_right = 1.8970001
anchor_bottom = 0.5
offset_left = 0.11999512
offset_top = -0.05000019
offset_right = -0.06604004
offset_bottom = 0.5
text = "Item"

[node name="runButton" type="Button" parent="CanvasLayer/camoverlay/TextureRect/BattlePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.46
anchor_top = 0.512
anchor_right = 1.8970001
anchor_bottom = 1.0
offset_left = 0.11999512
offset_top = 0.039993286
offset_right = -0.06604004
offset_bottom = 1.0
text = "Run"

[node name="SavePanel" type="Panel" parent="CanvasLayer/camoverlay/TextureRect"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.11800001
anchor_top = 0.093
anchor_right = 0.744
anchor_bottom = 0.624
offset_left = -0.040008545
offset_top = 0.040000916
offset_right = -0.32000732
offset_bottom = -0.27999878

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/camoverlay/TextureRect/SavePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.022000002
anchor_top = 0.047000002
anchor_right = 0.9760001
anchor_bottom = 0.95500004
offset_left = 0.37799835
offset_top = 0.045999527
offset_right = 0.22393799
offset_bottom = 0.18997192

[node name="ContinueButton" type="Button" parent="CanvasLayer/camoverlay/TextureRect/SavePanel/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="SaveButton" type="Button" parent="CanvasLayer/camoverlay/TextureRect/SavePanel/VBoxContainer"]
layout_mode = 2
text = "Save
"

[node name="QuitButton" type="Button" parent="CanvasLayer/camoverlay/TextureRect/SavePanel/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="SaveOutput" type="TextEdit" parent="CanvasLayer/camoverlay/TextureRect/SavePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
editable = false
wrap_mode = 1

[node name="GameWon" type="Panel" parent="CanvasLayer/camoverlay/TextureRect"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.013
anchor_top = 0.028
anchor_right = 0.8
anchor_bottom = 0.65800005
offset_left = 0.3600006
offset_top = -0.15999985
offset_bottom = 0.23995972

[node name="Label" type="Label" parent="CanvasLayer/camoverlay/TextureRect/GameWon"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.23500001
anchor_top = 0.081
anchor_right = 0.776
anchor_bottom = 0.24400002
offset_left = 0.35498047
offset_top = 0.22600174
offset_right = -0.43200684
offset_bottom = 0.2239914
theme_override_font_sizes/font_size = 60
text = "You won :)"

[node name="TotalKills" type="Label" parent="CanvasLayer/camoverlay/TextureRect/GameWon"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.194
anchor_top = 0.324
anchor_right = 0.37500003
anchor_bottom = 0.48900002
offset_left = -0.3580017
offset_top = -0.09599304
offset_right = 0.37496948
offset_bottom = -0.006011963

[node name="NetGold" type="Label" parent="CanvasLayer/camoverlay/TextureRect/GameWon"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.44300002
anchor_top = 0.335
anchor_right = 0.625
anchor_bottom = 0.5
offset_left = -0.10101318
offset_top = -0.08999634
offset_right = -0.375

[node name="TotalTiles" type="Label" parent="CanvasLayer/camoverlay/TextureRect/GameWon"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.194
anchor_top = 0.57500005
anchor_right = 0.37500003
anchor_bottom = 0.74
offset_left = -0.3580017
offset_top = -0.05001831
offset_right = 0.37496948
offset_bottom = 0.040008545

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/camoverlay"]
clip_contents = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.83900005
anchor_top = 0.008
anchor_right = 0.99500006
anchor_bottom = 0.41200003
offset_left = -0.045043945
offset_top = -0.055000305
offset_right = 0.27490234
offset_bottom = 0.35998535

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/camoverlay/ScrollContainer"]
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/camoverlay/TextureRect/ShopPanel/PurchaseButton" to="CanvasLayer/camoverlay" method="_on_PurchaseButton_pressed"]
[connection signal="pressed" from="CanvasLayer/camoverlay/TextureRect/Button/MoveButton" to="CanvasLayer/camoverlay" method="_on_move_button_pressed"]
[connection signal="pressed" from="CanvasLayer/camoverlay/TextureRect/Button/UseButton" to="CanvasLayer/camoverlay" method="_on_use_button_pressed"]
[connection signal="pressed" from="CanvasLayer/camoverlay/TextureRect/Button/DropButton" to="CanvasLayer/camoverlay" method="_on_drop_button_pressed"]
[connection signal="pressed" from="CanvasLayer/camoverlay/TextureRect/BattlePanel/attackButton" to="CanvasLayer/camoverlay" method="_on_attack_button_pressed"]
[connection signal="pressed" from="CanvasLayer/camoverlay/TextureRect/BattlePanel/magicButton" to="CanvasLayer/camoverlay" method="_on_magic_button_pressed"]
[connection signal="pressed" from="CanvasLayer/camoverlay/TextureRect/BattlePanel/itemButton" to="CanvasLayer/camoverlay" method="_on_battle_item_pressed"]
[connection signal="pressed" from="CanvasLayer/camoverlay/TextureRect/BattlePanel/runButton" to="CanvasLayer/camoverlay" method="_on_run_button_pressed"]
[connection signal="pressed" from="CanvasLayer/camoverlay/TextureRect/SavePanel/VBoxContainer/ContinueButton" to="CanvasLayer/camoverlay" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CanvasLayer/camoverlay/TextureRect/SavePanel/VBoxContainer/SaveButton" to="CanvasLayer/camoverlay" method="_on_SaveButton_pressed"]
[connection signal="pressed" from="CanvasLayer/camoverlay/TextureRect/SavePanel/VBoxContainer/QuitButton" to="CanvasLayer/camoverlay" method="_on_QuitButton_pressed"]
